{
    "name": "Game Controls",
    "maps": [
        {
            "name": "Player Controls",
            "id": "f04505c2-fdb5-4feb-b193-34e6bb040a89",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "426f1f9f-e715-490c-990e-7c07b1a6cea6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "320ba30a-dbbe-4124-93a2-57fd05b716db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "f7c118b7-1233-429a-8c48-dd1efb4da520",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "ef1c93c6-f9d6-4a7c-9d7b-bd0612f4164f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMouseHold",
                    "type": "Button",
                    "id": "9db7b1bf-d231-4dc3-bd0e-edc3353aa5b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "61fe65cf-a1b5-41d8-ad53-6e324ef71389",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "033e4d4c-a9d3-4666-89a2-47bb4c05f2ee",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "469b9f83-3a85-446e-b6b1-0058a7c6ca78",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ea939cf3-0c04-44bd-bd99-e80ae6381206",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fa45d935-acce-4081-a77e-86e7478bc47b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4de6f948-a3c4-4191-a98c-dc8f31e4e264",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41f11655-f30e-4b63-b2d6-d3fe6c642d76",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c023c1b-eb50-46c5-a584-88d43488792f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c62e882-a9fa-4b16-af6a-4ab5eaeda107",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera Controls",
            "id": "a8b890f6-b3cb-4d2f-840d-19886f121e5e",
            "actions": [
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "279fad7f-b535-4844-9571-461dd230884b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "69b9abab-4993-4c56-9488-a05c8cce8691",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6d534417-b1af-4ca8-8f5a-ee45ca7770f4",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a420904-c6f4-4ffb-b95d-58b25148d7b8",
                    "path": "<VirtualMouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu Controls",
            "id": "10dfc408-ad58-4d87-883f-396738d52fad",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "c860de1d-8917-4f7a-b353-c8054dc394f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "29004df9-5b59-442d-b2f5-ef817e5c9bd1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenSkillTree",
                    "type": "Button",
                    "id": "c674c18b-38db-4b42-a4b9-83e6474be65f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenBuilding",
                    "type": "Button",
                    "id": "632deb80-b18e-41b1-9401-1f7d052e9d87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ea91d392-ea94-4bc6-a4ce-de63bd6cecfc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da677818-fddb-45f0-958c-cf323de0899a",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b104ba75-8d99-446f-9a41-f2de2772526f",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenSkillTree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c360f31-2055-4845-aeaa-3d86e2bfccae",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "b6baa639-682c-4c1b-a96c-e712fd8c75f1",
            "actions": [
                {
                    "name": "FirstSkill",
                    "type": "Button",
                    "id": "e0781768-6235-4f1c-8394-55612e74309f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondSkill",
                    "type": "Button",
                    "id": "de3fea22-0b2d-4ed4-8d70-e98828eb2fdf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThirdSkill",
                    "type": "Button",
                    "id": "840f1e1d-6598-416c-a410-459789c3aabb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UltimateSkill",
                    "type": "Button",
                    "id": "7c5e47dc-c35f-45de-b7b3-aa0e14d6eb13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "b954df27-659e-4765-ba6b-7e868dcc3c9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "1ad3522d-2962-4662-9248-e5f643ac386d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "97d7ef44-8e42-459c-a724-1a6dfd738537",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1254c80f-66bf-428e-b567-2bb1ef28afe7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f58edf81-6ff7-48fb-b5e1-6c1bca4e5324",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10aca93d-6860-46c9-90c3-d03b59fe6dc0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68c31c74-a440-4433-a6b9-4a326e73be8a",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3009fc98-e131-4897-9d52-1eec76d540a4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UltimateSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}